water wave added

--- a/src/pages/component/footer.scss
+++ b/src/pages/component/footer.scss
@@ -3,7 +3,7 @@
     width: 100%;
     padding: 1vw;
     color: white;
-    background-color: rgb(16, 16, 70);
+    background-color: #28b6f6;
 }
 .contactus, .address, .query{
 flex-basis: 30%;
