--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,69 @@
 body{
   // background-color: rgba(238, 238, 238, 0.771) !important;
 }
+// -----------water wave-----------
+
+// ---------text water --------
+.content h2 {
+  margin-left: 8vw;
+	color: #fff;
+	font-size: 3em;
+	position: absolute;
+	transform: translate(-50%, -50%);
+}
+@media screen and (max-width:'760px') {
+  .content h2 {
+    margin-left: 18vw;
+    color: #fff;
+    font-size: 1.5em;
+    position: absolute;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.content h2:nth-child(1) {
+	color: transparent;
+	-webkit-text-stroke: 2px #03a9f4;
+}
+
+.content h2:nth-child(2) {
+	color: #03a9f4;
+	animation: animate 4s ease-in-out infinite;
+}
+span{
+  font-size:1.2rem;
+}
+@keyframes animate {
+	0%,
+	100% {
+		clip-path: polygon(
+			0% 45%,
+			16% 44%,
+			33% 50%,
+			54% 60%,
+			70% 61%,
+			84% 59%,
+			100% 52%,
+			100% 100%,
+			0% 100%
+		);
+	}
+
+	50% {
+		clip-path: polygon(
+			0% 60%,
+			15% 65%,
+			34% 66%,
+			51% 62%,
+			67% 50%,
+			84% 45%,
+			100% 46%,
+			100% 100%,
+			0% 100%
+		);
+	}
+}
+
 h3, h1{
   color: #28b6f6 !important;
 }
