--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,22 @@
     justify-content: space-evenly;
     align-items: baseline;
 }
+.sub_header{
+    width: 100%;
+    background-color: #28b6f6;
+    height: 50px;
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 0 2vw;
+}
+.sub_header >h1,h2,h3,p,h4{
+    color:white;
+}
+.term_img{
+    width: 90%;
+    height: 90%;
+}
 
 .carousel-img {
     width: 100%;
@@ -81,10 +97,15 @@
 .input_c {
     color: white;
 }
-
+.bg-a{
+    background-color: #3f89f8 !important;
+}
 @media screen and (max-width:760px) {
     .carousel-img {
         height: 300px;
+    }
+    .row2{
+    flex-direction: column-reverse;
     }
 
     .form_r {
