--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,17 @@
     display: flex;
     align-items: center;
     padding: 0 2vw;
+    justify-content: space-between;
 }
 .sub_header >h1,h2,h3,p,h4{
     color:white;
+}
+button{
+    background-color:#28b6f6 !important ;
+    border: none;
+    box-shadow: 0 0 5px whitesmoke;
+    border-radius: 7px !important;
+    padding: 2px 10px !important;
 }
 .term_img{
     width: 90%;
